--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -181,6 +181,9 @@ layout: default
                             </li>
                             {% endif %}
                         </ul>
+                        {% if site.email %}
+                            <p> <i class="iconfont icon-email"></i> {{site.email}}</p>
+                        {% endif %}
                     </div>
                 </section>
                 <!-- Friends Blog -->
