--- a/portfolio/css/timeline.css
+++ b/portfolio/css/timeline.css
@@ -181,6 +181,15 @@ body, html {
 	background-size: 22px;
 }
 
+.i-java:before {
+	content: "";
+	display: block;
+	width: 40px;
+	height: 40px;
+	background: url("../images/java-icon.svg") 50% 50% no-repeat;
+	background-size: 22px;
+}
+
 /******* Hux Branch *****/
 
 /* navbar - dark mode */
