--- a/portfolio/css/timeline.css
+++ b/portfolio/css/timeline.css
@@ -211,7 +211,7 @@ header{
 	padding: 5em 0px;
 	padding-bottom: 10em;
 	position: relative;
-	border-bottom: 1px solid #edeeee;
+	/* border-bottom: 1px solid #edeeee; */
 }
 header h1 {
     font-size: 70px;
