--- a/portfolio/css/timeline.css
+++ b/portfolio/css/timeline.css
@@ -222,7 +222,7 @@ body, html {
 	display: block;
 	width: 40px;
 	height: 40px;
-	background: url("https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png") 50% 50% no-repeat;
+	background: url("../images/express-icon.png") 50% 50% no-repeat;
 	background-size: 22px;
 }
 
@@ -231,7 +231,7 @@ body, html {
 	display: block;
 	width: 40px;
 	height: 40px;
-	background: url("../images/mongodb-icon.jpg") 50% 50% no-repeat;
+	background: url("../images/mongodb-icon.png") 50% 50% no-repeat;
 	background-size: 22px;
 }
 .i-restful:before {
